monitoring/prometheus/templates/ingress.yml
#@ load("@ytt:data", "data")
#@ load("@ytt:assert", "assert")
#@ load("_ytt.lib.yml", "labels")

#@ if len(data.values.configuration.ingress.domains) == 0 or len(data.values.configuration.ingress.domains[0]) == 0 or data.values.configuration.ingress.domains[0] == "example.org":
#@  assert.fail("configuration.ingress.domain is missing or invalid")
#@ end
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus
  namespace: prometheus
  labels: #@ labels("ingress")
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/auth-signin: #@ "https://oauth2-proxy." + data.values.configuration.ingress.domains[0] + "/oauth2/start"
    nginx.ingress.kubernetes.io/auth-url: #@ "https://oauth2-proxy." + data.values.configuration.ingress.domains[0] + "/oauth2/auth"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - secretName: prometheus-ingress-tls
    hosts:
    #@ for host in data.values.configuration.ingress.domains:
    - #@ "prometheus." + host
    - #@ "alertmanager." + host
    #@ end
  rules:
  #@ for/end host in data.values.configuration.ingress.domains:
  - host: #@ "prometheus." + host
    http:
      paths:
      - backend:
          service:
            name: prometheus-server
            port:
              number: 80
        path: /
        pathType: Prefix
  #@ for/end host in data.values.configuration.ingress.domains:
  - host: #@ "alertmanager." + host
    http:
      paths:
      - backend:
          service:
            name: prometheus-alertmanager
            port:
              number: 80
        path: /
        pathType: Prefix
